feat: add AI-powered professional report generation
Implement comprehensive AI report generation system using Claude API:

Features:
- Three report types: Comprehensive, Executive, Farmer-Friendly
- Professional reports following ISO 14044/14067 standards
- Multiple export formats: Web view, Markdown, JSON
- Beautiful React component with modal viewer
- African agricultural context awareness
- Real-time generation (15-30 seconds)

Backend:
- AIReportGenerator service with Claude Sonnet 4
- FastAPI endpoints for report CRUD operations
- Health monitoring and error handling
- Async/await for non-blocking operations

Frontend:
- ReportViewer component with Framer Motion animations
- Report type selection UI
- Export functionality
- Integrated into results page

Documentation:
- Comprehensive setup guide
- Quick start guide
- Implementation summary
- .env.example template

Security:
- Enhanced .gitignore for secrets protection
- Environment variable configuration
- No API keys in code

Dependencies:
- anthropic==0.42.0 added to requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,16 @@ african_lca_api/Lib/
 african_lca_api/include/
 african_lca_api/Scripts/
 
+# Environment variables and secrets
+.env
+.env.local
+.env.*.local
+app/.env
+**/.env
+
 # Rust
 african_lca_backend/target/
+target/
 **/*.rs.bk
 
 # Node/Frontend
