--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,13 @@ african_lca_api/Scripts/
 
 # Environment variables and secrets
 .env
+.env.example
 .env.local
 .env.*.local
 app/.env
+app/.env.example
 **/.env
+**/.env.example
 
 # Rust
 african_lca_backend/target/
