Update gitignore to exclude all .md files except README

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,10 @@ Thumbs.db
 DEPLOYMENT.md
 # deploy.sh
 
+# Documentation - ignore all .md files except README
+*.md
+!README.md
+!**/README.md
+
 # Misc
 .claude/
